objects/tffa__Party__c.object
<CustomObject>
    <fields>
        <fullName>tffa__HasDifferentMailingAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True, if party captures a mailing address different from the preferred address .</description>
        <label>HasDifferentMailingAddress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__HousingStatus__c</fullName>
        <description>Type that specifies the basis on which the borrower lives/lived at the indicated address.</description>
        <label>Housing status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__HousingStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__IDAStatus__c</fullName>
        <description>A rollup of status across DueDiligence(s) of type IDA.</description>
        <label>IDA status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DueDiligenceStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__IDVStatus__c</fullName>
        <description>A rollup of status across DueDiligence(s) of type IDV.</description>
        <label>IDV Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DueDiligenceStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__IncomeReportGeneratedOn__c</fullName>
        <description>The date and time of report generation</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Income report generated on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tffa__IncomeReportId__c</fullName>
        <description>Unique report id as identified by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Income report id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__IncomeReportProvider__c</fullName>
        <description>Name of the Provider of the income report</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Income report provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__IncomeReportTokenExpiresOn__c</fullName>
        <description>The date and time of access token expiry</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Income report token expires on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tffa__IncomeReportToken__c</fullName>
        <description>Holds encrypted value of income report token</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Income report token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__IncomeReportType__c</fullName>
        <description>Type of the income report</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Income report type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__IndustryClassificationType__c</fullName>
        <description>The type of classification of the company</description>
        <label>Industry classification type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__IndustryClassificationType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__IndustryClassificationValue__c</fullName>
        <description>the value captured against the industrylassificationType</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Industry classification value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__IsAssetNotApplicable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True, if assets are not applicable for the current application</description>
        <label>Is asset not applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsEmployee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>true, if the individual is an employee of the bank</description>
        <label>Is employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsExistingCustomer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the current applicant is existing customer of the bank.</description>
        <label>IsExistingCustomer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsGiftNotApplicable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True, if gifts are not applicable for the current application</description>
        <label>Is gift not applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsIncomeNotApplicable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True, if incomes are not applicable for the current application</description>
        <label>Is income not applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsLiabilityNotApplicable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True, if liabilities are not applicable for the current application</description>
        <label>Is liability not applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsMinor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the Individual is minor by law. Default is false</description>
        <label>Is Minor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsRealEstateNotApplicable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True, if real estates are not applicable for the current application</description>
        <label>Is real estate not applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__KYCDecisionOutcome__c</fullName>
        <description>Outcome of a KYC decisioning process.</description>
        <label>KYC Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PartyDecisionOutcome</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__KYCDecisionOverridden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If auto KYCDecisionOutcome was overridden.</description>
        <label>KYC Decision Overridden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__KYCDecisionStrategy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Decision Strategy of related (KYC) Matrix. Can be used for analysing the efficacy of the strategy during Champion/Challenger testing. e.g. does the new strategy involving new set of rules (based on new facts) yield better results.</description>
        <label>KYC Decision Strategy</label>
        <referenceTo>tffa__DecisionStrategy__c</referenceTo>
        <relationshipLabel>KYC Decisioned Parties</relationshipLabel>
        <relationshipName>KYCDecisionedParties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__KYCReportLink__c</fullName>
        <description>Link to KYC report. Primarily used in salesforce pages.</description>
        <formula>IF(ISBLANK(tffa__KYCReportUrl__c), NULL, HYPERLINK(tffa__KYCReportUrl__c + &apos;?id=&apos; + Id, &apos;View Report&apos;, &apos;_self&apos;))</formula>
        <label>KYC Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__KYCReportUrl__c</fullName>
        <description>KYC Report url. Usually points to a VF page.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>KYC Report url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>tffa__Last4NationalIdentifierValue__c</fullName>
        <description>Captures Last 4 characters of National Identifier Value</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last 4 of National identifier value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__LastName__c</fullName>
        <description>The last name of the individual represented by the parent object</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__LastnNationalIdentifierValue__c</fullName>
        <description>Captures Last n characters of National Identifier Value</description>
        <formula>tffa__Last4NationalIdentifierValue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last 4 of National identifier value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__LegalName__c</fullName>
        <description>The legal name of a business is the official name of the person or entity that owns a business.For limited partnerships, LLCs, and corporations, the legal name of the business is the name registered with the state filing office</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Legal name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__MaritalStatus__c</fullName>
        <description>Indicates marital status of the applicant.</description>
        <label>Marital status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__MaritalStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__MiddleName__c</fullName>
        <description>The middle name of the individual represented by the parent object.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Middle name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__MonthlyPayment__c</fullName>
        <description>The amount paid by the applicant towards his housing expenses</description>
        <label>MonthlyPayment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__MothersMaidenName__c</fullName>
        <description>Captures mother&apos;s maiden name of an individual party.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Mother&apos;s Maiden Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__NationalIdentifierType__c</fullName>
        <description>Classifies identification numbers used by the Internal Revenue Service (IRS) in the administration of tax laws.</description>
        <label>National identifier type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__NationalIdentifierType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__NationalIdentifierValue__c</fullName>
        <description>The value of the taxpayer identifier as assigned by the IRS to the individual or legal entity.</description>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>National identifier value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__NickName__c</fullName>
        <description>A familiar name given to a individial instead of or as well as the legal name. Can be used in communication mechanisms.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Nick name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfAssets__c</fullName>
        <description>Number of Assets</description>
        <label>Number of Assets</label>
        <summaryForeignKey>tffa__Asset__c.tffa__Party__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfDeclarations__c</fullName>
        <description>Number of Declarations</description>
        <label>Number of Declarations</label>
        <summaryForeignKey>tffa__Declaration__c.tffa__Party__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfDependents__c</fullName>
        <description>The total number of borrower&apos;s dependents.</description>
        <label>Number of dependents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfEmployees__c</fullName>
        <description>Number of employees in the organization</description>
        <label>Number of employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfEmployments__c</fullName>
        <description>Number of Employments</description>
        <label>Number of Employments</label>
        <summaryForeignKey>tffa__Employment__c.tffa__Party__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfExpenses__c</fullName>
        <description>Number of Expenses</description>
        <label>Number of Expenses</label>
        <summaryForeignKey>tffa__Expense__c.tffa__Party__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfFinancialAccounts__c</fullName>
        <description>Number of Financial Accounts</description>
        <label>Number of Financial Accounts</label>
        <summaryForeignKey>tffa__PartyFinancialAccountXref__c.tffa__Party__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfFinancialStatements__c</fullName>
        <description>Number of Financial Statements</description>
        <label>Number of Financial Statements</label>
        <summaryForeignKey>tffa__FinancialStatement__c.tffa__Party__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfIncomes__c</fullName>
        <description>Number of Incomes</description>
        <label>Number of Incomes</label>
        <summaryForeignKey>tffa__Income__c.tffa__Party__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfLiabilities__c</fullName>
        <description>Number of Liabilities</description>
        <label>Number of Liabilities</label>
        <summaryForeignKey>tffa__Liability__c.tffa__Party__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>tffa__OFACStatus__c</fullName>
        <description>A rollup of status across DueDiligence(s) of type OFAC.</description>
        <label>OFAC Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DueDiligenceStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__OLBAuthenticationRetryCount__c</fullName>
        <description>Total number of OLB authentication retry attempts</description>
        <label>OLB authentication retry count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__OLBEnrolled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the party (an existing customer) has already enrolled in Online Banking.</description>
        <label>OLB enrolled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__OTPExpiresOn__c</fullName>
        <description>Datetime value on which confirmation token expires for the current party</description>
        <encryptionScheme>None</encryptionScheme>
        <label>One Time Token expires on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tffa__OTPGenerationRetryCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of OTP generation retry attempts</description>
        <label>OTP generation retry count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__OTPLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether OTP validation/generation is locked due to security issues</description>
        <label>OTP Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__OTPRetryCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of OTP validation retry attempts</description>
        <label>OTP retry count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__OTPStatus__c</fullName>
        <description>Status of OTP validation</description>
        <label>OTP Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__OTPStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__OTP__c</fullName>
        <description>One time confirmation token generated for the applicant to authenticate himself</description>
        <encryptionScheme>None</encryptionScheme>
        <label>One Time Confirmation token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__OnboardingDate__c</fullName>
        <description>Date on which party was onboarded into the system</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Onboarding date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__OrganizationSubType__c</fullName>
        <description>Further detail classification of an organization based on the organization type.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Organization sub type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__OrganizationType__c</fullName>
        <description>Type of Organization. This governs the structure of the business.</description>
        <label>Organization type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__OrganizationType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__PoliticallyExposedPerson__c</fullName>
        <defaultValue>false</defaultValue>
        <description>true, if the individual has been entrusted with a prominent public function. A PEP generally presents a higher risk for potential involvement in bribery and corruption by virtue of their position and the influence that they may hold</description>
        <label>Politically Exposed Person</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__PreferredAddressCountry__c</fullName>
        <description>The preferred address country for the applicant. Computed based on address captured.</description>
        <label>Preferred address country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__AddressCountry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__PreferredAddressState__c</fullName>
        <description>The preferred address state for the applicant. Computed based on address captured.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Preferred address state</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__PreferredContactMethod__c</fullName>
        <description>Indicates preferred contact method to contact the applicant.</description>
        <label>Preferred contact method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ContactMethodType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__PreferredLanguage__c</fullName>
        <description>The preferred Language for the applicant</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Preferred language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__PreferredTimeToCall__c</fullName>
        <description>Preferred time to call to the applicant if the application has been scheduled.</description>
        <label>Preferred time to call</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ContactTimeSlot</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__PrefillProvider__c</fullName>
        <description>The provider of prefill for the party like Plaid</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Accounting data provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__PrefillSource__c</fullName>
        <description>The source of prefill data for the applicant information.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Prefill source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__PrefillToken__c</fullName>
        <description>Holds encrypted value of prefill tokens</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Prefill Token</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__Prefilled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>true, if the data was prefilled using either scanning of photo ID or existing customer login.</description>
        <label>Prefilled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Prefix__c</fullName>
        <description>Title preceding the name of an individual (Judge, Mr. Mrs. Colonel).</description>
        <label>Prefix</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__Prefix</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__PrimaryEmailType__c</fullName>
        <description>The type of the primary  email , valid values can be HOME,WORK,BUSINESS</description>
        <label>Primary email type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__EmailType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__PrimaryEmailVerificationMethod__c</fullName>
        <description>Primary email verification method, usually OTP , Manual or KYC</description>
        <label>Primary Email Verification Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__EmailVerificationMethodType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__PrimaryEmailVerifiedOn__c</fullName>
        <description>The date and time of verification of primary email</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary Email Verified on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tffa__PrimaryEmail__c</fullName>
        <description>Primary email of the party.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__PrimaryPhoneType__c</fullName>
        <description>The type of the primary phone</description>
        <label>Primary phone type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PhoneType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__PrimaryPhoneVerificationMethod__c</fullName>
        <description>Primary phone verification method, usually OTP , Manual or KYC</description>
        <label>Primary Phone Verification Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PhoneVerificationMethodType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__PrimaryPhoneVerifiedOn__c</fullName>
        <description>The date and time of verification of primary phone</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary Phone Verified on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tffa__PrimaryPhone__c</fullName>
        <description>Primary phone number of the party</description>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Primary phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ProcessId__c</fullName>
        <description>The unique identifier of the process associated with synchronization or data pull from external system.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Process id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ProcessProgress__c</fullName>
        <description>Captures progress of synchronization or data pull from external system</description>
        <label>Process progress</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__ProcessState__c</fullName>
        <description>Captures state of synchronization or data pull from external system.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Process state</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ProcessStatus__c</fullName>
        <description>Captures state of synchronization or data pull from external system in broader terms. Usually provides an overall picture and is a fixed set.</description>
        <label>Process status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PartyProcessStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__QualiFileStatus__c</fullName>
        <description>A rollup of status across DueDiligence(s) of type QUALIFILE.</description>
        <label>QualiFile Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DueDiligenceStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__RaceDesignationAsianType__c</fullName>
        <description>A value from a MISMO prescribed list that represents the borrower&apos;s or interviewer&apos;s statement about the borrower&apos;s race designation as defined in the Home Mortgage Disclosure Act.</description>
        <label>Race designation asian type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__AsianRaceType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__RaceDesignationOtherAsian__c</fullName>
        <description>A value from a MISMO prescribed list that represents the borrower&apos;s or interviewer&apos;s statement about the borrower&apos;s race designation as defined in the Home Mortgage Disclosure Act.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Race designation other asian</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__RaceDesignationOtherPacificIslander__c</fullName>
        <description>A value from a MISMO prescribed list that represents the borrower&apos;s or interviewer&apos;s statement about the borrower&apos;s race designation as defined in the Home Mortgage Disclosure Act.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Race designation other pacific islander</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__RaceDesignationPacificIslanderType__c</fullName>
        <description>A value from a MISMO prescribed list that represents the borrower&apos;s or interviewer&apos;s statement about the borrower&apos;s race designation as defined in the Home Mortgage Disclosure Act.</description>
        <label>Race designation pacific islander type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__HawaiiRaceType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__RaceManuallyDetermined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true, indicates the race was collected based on visual observation or surname</description>
        <label>Race manually determined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__RaceTypeAdditionalDescription__c</fullName>
        <description>A free-form text field used to capture information specific to HMDA Race Designation category of Other Asian.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Race type additional description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__RaceType__c</fullName>
        <description>Represents the borrower&apos;s or interviewer&apos;s statement about the borrower&apos;s race as defined in the Home Mortgage Disclosure Act. Up to 5 Race Types may be included per borrower.</description>
        <label>Race type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__RaceType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__RecordIds__c</fullName>
        <description>Comma separated list of matched party Ids for the current party, based on key attributes of party record.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Record ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__RegistrationLocationState__c</fullName>
        <description>State in which current company is registered</description>
        <label>Registration Location state</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__US_States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Role__c</fullName>
        <defaultValue>&quot;PROSPECT&quot;</defaultValue>
        <description>The role played by the party in the bank - CUSTOMER, PROSPECT.  This is different from applicant role which is specific to an application.</description>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PartyRole</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__SecondaryEmailType__c</fullName>
        <description>The type of the secondary email</description>
        <label>Secondary email type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__EmailType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__SecondaryEmailVerificationMethod__c</fullName>
        <description>Secondary email verification method, usually OTP , Manual or KYC</description>
        <label>Secondary Email Verification Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__EmailVerificationMethodType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__SecondaryEmailVerifiedOn__c</fullName>
        <description>The date and time of verification of secondary email</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Secondary Email Verified on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tffa__SecondaryEmail__c</fullName>
        <description>Secondary email of the party.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Secondary email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>